# AppDesign_1_Complete

./: CMakeLists.txt  CMakeSettings.json
design/: app_scene.ui
include/galileo/Application/: ApplicationModel.h  BaseScene.h
src/galileo/: CMakeLists.txt
src/galileo/Application/: ApplicationModel.cpp  ApplicationModel.cpp.bak  CMakeLists.txt  ConfigScene.cpp.bak  InitialScene.cpp
src/galileo/Loader/: CMakeLists.txt  main.cpp
